2015-03-15 (Version 1.0.1)
* Adjusted default font size

2015-03-16 (Version 1.0.0)
* Removed Vera Sans font
* Set Source Sans Pro as default font
* Added horizontal line after the header
* Requires Ruby 2.0

2009-10-19 (Version 0.2.7.5)
* Enclosed ResumeParser in module

2009-09-30 (Version 0.2.7)
* Added encodings for Ruby 1.9 compatibility

2009-09-29 (Version 0.2.6)
* Added text exporter

2009-09-25 (Version 0.2.5.1)
* Bumped prawn dependency to 0.5.1

2009-09-17 (Version 0.2.4)
* Added property helpers to ResumeTools::Resume
* Added plain text renderer (ResumeTools::Resume#render_plain_text)

2009-09-01
* Path cleanup