@@ -25,6 +25,6 @@
 
 unless defined? ResumeTools::VERSION
   module ResumeTools
-    VERSION = "1.0.1"
+    VERSION = "1.0.2"
   end
 end
